--- a/angular/package.json
+++ b/angular/package.json
@@ -8,7 +8,7 @@
     },
     "devDependencies": {
         "grunt": "~0.4",
-        "grunt-recess": "~0.3.0",
+        "grunt-recess": "latest",
         "grunt-contrib-clean": "~0.4.1",
         "grunt-contrib-copy": "~0.4.1",
         "grunt-contrib-jshint": "~0.4.3",
