--- a/angular/package.json
+++ b/angular/package.json
@@ -22,6 +22,7 @@
         "grunt-svgmin": "~0.2.0",
         "grunt-rev": "~0.1.0",
         "grunt-concurrent": "~0.3.0",
+        "grunt-ftp-deploy": "0.1.3",
         "load-grunt-tasks": "~0.1.0",
         "karma-ng-scenario": "~0.1.0",
         "grunt-karma": "~0.6.2",
