--- a/angular/bower.json
+++ b/angular/bower.json
@@ -1,15 +1,19 @@
 {
-    "name": "rented.io",
-    "version": "0.0.1",
-    "dependencies": {
-        "angular": "latest",
-        "angular-route": "latest",
-        "angular-sanitize": "latest",
-        "angular-bootstrap": "latest",
-        "angularfire": "latest",
-        "jquery": "latest",
-        "bootstrap": "latest",
-        "moment": "latest",
-        "fontawesome": "latest"
-    }
+  "name": "rented.io",
+  "version": "0.0.1",
+  "dependencies": {
+    "angular": "latest",
+    "angular-route": "latest",
+    "angular-sanitize": "latest",
+    "angular-bootstrap": "latest",
+    "angularfire": "latest",
+    "jquery": "latest",
+    "bootstrap": "latest",
+    "moment": "latest",
+    "fontawesome": "latest",
+    "angularytics": "latest"
+  },
+  "resolutions": {
+    "angular": "1.2.16"
+  }
 }
