better TopBannerChannel, password reset, vendor assets in original dir

--- a/angular/bower.json
+++ b/angular/bower.json
@@ -12,6 +12,7 @@
     "moment": "latest",
     "fontawesome": "latest",
     "angularytics": "latest",
-    "FlexSlider": "latest"
+    "FlexSlider": "latest",
+    "underscore": "~1.7.0"
   }
 }
