rm livechat, better footer

--- a/angular/firebase.json
+++ b/angular/firebase.json
@@ -1,5 +1,5 @@
 {
-    "firebase": "stage-rented-io",
+    "firebase": "burning-fire-386",
     "public": "dist",
     "rules": "config/security-rules.json"
 }
