profile picture upload

--- a/angular/bower.json
+++ b/angular/bower.json
@@ -15,6 +15,7 @@
     "FlexSlider": "latest",
     "underscore": "latest",
     "holderjs": "~2.4.0",
-    "clndr": "~1.2.1"
+    "clndr": "~1.2.1",
+    "ng-file-upload": "~1.6.5"
   }
 }
