--- a/angular/bower.json
+++ b/angular/bower.json
@@ -16,6 +16,10 @@
     "underscore": "latest",
     "holderjs": "~2.4.0",
     "clndr": "~1.2.1",
-    "ng-file-upload": "~1.6.5"
+    "ng-file-upload": "~1.6.5",
+    "famous-angular": "~0.3.0"
+  },
+  "resolutions": {
+    "angular": "1.2.23"
   }
 }
