--- a/angular/bower.json
+++ b/angular/bower.json
@@ -17,7 +17,8 @@
     "holderjs": "~2.4.0",
     "clndr": "~1.2.1",
     "ng-file-upload": "~1.6.5",
-    "famous-angular": "~0.3.0"
+    "famous-angular": "~0.3.0",
+    "angular-uuid4": "~0.1.0"
   },
   "resolutions": {
     "angular": "1.2.23"
