--- a/angular/bower.json
+++ b/angular/bower.json
@@ -18,7 +18,8 @@
     "clndr": "~1.2.1",
     "ng-file-upload": "~1.6.5",
     "famous-angular": "~0.3.0",
-    "angular-uuid4": "~0.1.0"
+    "angular-uuid4": "~0.1.0",
+    "async": "~0.9.0"
   },
   "resolutions": {
     "angular": "1.2.23"
