--- a/angular/bower.json
+++ b/angular/bower.json
@@ -2,7 +2,7 @@
   "name": "rented.io",
   "version": "0.0.1",
   "dependencies": {
-    "angular": "latest",
+    "angular": "~1.2.23",
     "angular-route": "latest",
     "angular-sanitize": "latest",
     "angular-bootstrap": "latest",
@@ -19,7 +19,8 @@
     "ng-file-upload": "~1.6.5",
     "famous-angular": "~0.3.0",
     "angular-uuid4": "~0.1.0",
-    "async": "~0.9.0"
+    "async": "~0.9.0",
+    "angular-input-masks": "~1.2.0"
   },
   "resolutions": {
     "angular": "1.2.23"
