--- a/angular/bower.json
+++ b/angular/bower.json
@@ -20,7 +20,8 @@
     "famous-angular": "~0.3.0",
     "angular-uuid4": "~0.1.0",
     "async": "~0.9.0",
-    "angular-input-masks": "~1.2.0"
+    "angular-input-masks": "~1.2.0",
+    "angular-ui-utils": "~0.1.1"
   },
   "resolutions": {
     "angular": "1.2.23"
