--- a/angular/package.json
+++ b/angular/package.json
@@ -39,6 +39,7 @@
     "grunt-html2js": "~0.1.3",
     "grunt-conventional-changelog": "~0.1.1",
     "grunt-bump": "0.0.6",
-    "grunt-contrib-less": "^0.11.4"
+    "grunt-contrib-less": "^0.11.4",
+    "grunt-contrib-imagemin": "^0.8.1"
   }
 }
