--- a/angular/bower.json
+++ b/angular/bower.json
@@ -21,7 +21,8 @@
     "angular-uuid4": "~0.1.0",
     "async": "~0.9.0",
     "angular-input-masks": "~1.2.0",
-    "angular-ui-utils": "~0.1.1"
+    "angular-ui-utils": "~0.1.1",
+    "angular-youtube-mb": "~0.1.3"
   },
   "resolutions": {
     "angular": "1.2.23"
