--- a/angular/bower.json
+++ b/angular/bower.json
@@ -22,7 +22,8 @@
     "async": "~0.9.0",
     "angular-input-masks": "~1.2.0",
     "angular-ui-utils": "~0.1.1",
-    "angular-youtube-mb": "~0.1.3"
+    "angular-youtube-mb": "~0.1.3",
+    "angulartics": "latest"
   },
   "resolutions": {
     "angular": "1.2.23"
