--- a/angular/bower.json
+++ b/angular/bower.json
@@ -22,8 +22,7 @@
     "async": "~0.9.0",
     "angular-input-masks": "~1.2.0",
     "angular-ui-utils": "~0.1.1",
-    "angular-youtube-mb": "~0.1.3",
-    "angulartics": "latest"
+    "angular-youtube-mb": "~0.1.3"
   },
   "resolutions": {
     "angular": "1.2.23"
