--- a/express/package.json
+++ b/express/package.json
@@ -1,39 +1,41 @@
 {
-    "name": "rented.co",
-    "description": "Rent Your Way",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "start": "node app.js"
-    },
-    "dependencies": {
-        "body-parser": "^1.9.0",
-        "compression": "^1.1.0",
-        "cookie-parser": "^1.3.3",
-        "ejs": "^1.0.0",
-        "errorhandler": "^1.2.0",
-        "express": "^4.9.7",
-        "express-session": "^1.8.2",
-        "lodash": "^2.4.1",
-        "method-override": "^2.2.0",
-        "morgan": "^1.3.2",
-        "serve-favicon": "^2.1.5",
-        "winston": "^0.8.1",
-        "request": "~2.46.0"
-    },
-    "devDependencies": {
-        "supervisor": "~0.4.1",
-        "connect-livereload": "~0.4.0",
-        "grunt": "^0.4.5",
-        "grunt-autoprefixer": "~1.0.1",
-        "grunt-bump": "0.0.6",
-        "grunt-concurrent": "^1.0.0",
-        "grunt-contrib-clean": "~0.6.0",
-        "grunt-contrib-jshint": "~0.10.0",
-        "grunt-contrib-nodeunit": "~0.1.2",
-        "grunt-contrib-watch": "~0.6.1"
-    },
-    "engines": {
-        "node": ">= 0.10.0"
-    }
+  "name": "rented.co",
+  "description": "Rent Your Way",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.9.0",
+    "compression": "^1.1.0",
+    "cookie-parser": "^1.3.3",
+    "ejs": "^1.0.0",
+    "errorhandler": "^1.2.0",
+    "express": "^4.9.7",
+    "express-session": "^1.8.2",
+    "lodash": "^2.4.1",
+    "method-override": "^2.2.0",
+    "morgan": "^1.3.2",
+    "mysql": "2.5.4",
+    "request": "~2.46.0",
+    "sequelize": "^2.0.0-rc3",
+    "serve-favicon": "^2.1.5",
+    "winston": "^0.8.1"
+  },
+  "devDependencies": {
+    "supervisor": "~0.4.1",
+    "connect-livereload": "~0.4.0",
+    "grunt": "^0.4.5",
+    "grunt-autoprefixer": "~1.0.1",
+    "grunt-bump": "0.0.6",
+    "grunt-concurrent": "^1.0.0",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.1.2",
+    "grunt-contrib-watch": "~0.6.1"
+  },
+  "engines": {
+    "node": ">= 0.10.0"
+  }
 }
