fixed config file for sql

--- a/express/config/nginx.conf
+++ b/express/config/nginx.conf
@@ -18,6 +18,8 @@ http {
         keepalive_timeout 65;
         types_hash_max_size 2048;
 
+        #server_names_hash_max_size 512;
+
         include /etc/nginx/mime.types;
         default_type application/octet-stream;
 
@@ -31,8 +33,16 @@ http {
         ##
         # Gzip Settings
         ##
+
         gzip on;
         gzip_disable "msie6";
+
+        ##
+        # Virtual Host Configs
+        ##
+
+        #include /etc/nginx/conf.d/*.conf;
+        #include /etc/nginx/sites-enabled/*;
 
         server {
                    listen         80;
@@ -44,7 +54,7 @@ http {
         server {
                 listen               443;
                 ssl                  on;
-                ssl_certificate      /home/ubuntu/certificates/cacert.pem;
+                ssl_certificate      /home/ubuntu/certificates/server.crt;
                 ssl_certificate_key  /home/ubuntu/certificates/privkey.pem;
                 server_name ec2-54-149-70-41.us-west-2.compute.amazonaws.com;
                 ssl_session_timeout  5m;
@@ -54,6 +64,9 @@ http {
                 proxy_buffer_size   512k;
                 proxy_buffers   4 512k;
                 proxy_busy_buffers_size   512k;
+
+                #root /usr/share/nginx/html;
+                #index index.html index.htm;
 
                 location / {
                         proxy_set_header X-Real-IP $remote_addr;
