changes to express middleware and Nginx config to get working on EC2, on EC2 grunt build/compile is buggy but could just be buggy locally too checking AND vendor dir not copied when git post-receive hook after push from local to EC2

--- a/express/config/nginx.conf
+++ b/express/config/nginx.conf
@@ -67,8 +67,7 @@ http {
                 proxy_busy_buffers_size   512k;
 
                 # root needs to be change to something general like /var/www/rented.co that is the directory or a symbolic link to the branch you use so root isn't branch dependent
-                #root /var/www/rented.co/experian/angular/dist;
-                #index index.html index.htm;
+                root /var/www/rented.co;
 
                 location / {
                         proxy_set_header X-Real-IP $remote_addr;
