--- a/angular/bower.json
+++ b/angular/bower.json
@@ -6,13 +6,13 @@
     "angular-route": "latest",
     "angular-sanitize": "latest",
     "angular-bootstrap": "latest",
-    "angularfire": "latest",
+    "angularfire": "0.9.0",
+    "firebase": "2.0.4",
     "jquery": "latest",
     "bootstrap": "latest",
-    "moment": "latest",
+    "moment": "2.8.4",
     "fontawesome": "latest",
     "angularytics": "latest",
-    "FlexSlider": "latest",
     "underscore": "latest",
     "holderjs": "~2.4.0",
     "clndr": "~1.2.1",
@@ -22,7 +22,7 @@
     "angular-input-masks": "~1.2.0",
     "angular-ui-utils": "~0.1.1",
     "angular-youtube-mb": "~0.1.3",
-    "angulartics": "latest",
+    "angulartics": "0.17.1",
     "jic": "git@github.com:brunobar79/J-I-C.git",
     "chained": "1.0.0",
     "markerclustererplus": "2.1.2",
@@ -30,7 +30,8 @@
     "isotope": "2.1.0",
     "bxslider-4": "4.1.2",
     "flexslider": "git@github.com:woothemes/FlexSlider.git",
-    "google-infobox": "git@github.com:PepijnSenders/google-infobox.git"
+    "google-infobox": "git@github.com:PepijnSenders/google-infobox.git",
+    "gmaps": "0.4.16"
   },
   "resolutions": {
     "angular": "1.2.23"
