--- a/angular/package.json
+++ b/angular/package.json
@@ -13,7 +13,7 @@
     "grunt-contrib-jshint": "~0.4.3",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-watch": "~0.4.0",
-    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-uglify": "~0.7.0",
     "grunt-autoprefixer": "~0.2.0",
     "grunt-contrib-cssmin": "~0.6.0",
     "grunt-contrib-htmlmin": "~0.1.3",
@@ -41,6 +41,7 @@
     "grunt-bump": "0.0.6",
     "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-imagemin": "^0.8.1",
-    "grunt-wiredep": "~2.0.0"
+    "grunt-wiredep": "~2.0.0",
+    "grunt-ng-annotate": "0.8.0"
   }
 }
