--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport-google-oauth": "latest",
     "passport-local": "~0.1.6",
     "passport-twitter": "latest",
+    "prerender-node": "^1.2.1",
     "sequelize": "^2.0.0-rc2",
     "serve-favicon": "~2.0.1",
     "socket.io": "^1.0.6",
@@ -30,9 +31,13 @@
     "sqlite3": "~3.0.2"
   },
   "devDependencies": {
+    "chai-as-promised": "^4.1.1",
+    "chai-things": "^0.2.0",
+    "connect-livereload": "~0.4.0",
     "grunt": "~0.4.4",
+    "grunt-angular-templates": "^0.5.4",
     "grunt-autoprefixer": "~0.7.2",
-    "grunt-wiredep": "~1.8.0",
+    "grunt-build-control": "DaftMonk/grunt-build-control",
     "grunt-concurrent": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.4.0",
@@ -43,52 +48,49 @@
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-dom-munger": "^3.4.0",
+    "grunt-env": "~0.4.1",
+    "grunt-express-server": "~0.4.17",
     "grunt-google-cdn": "~0.4.0",
+    "grunt-injector": "~0.5.4",
     "grunt-jscs": "~0.7.1",
+    "grunt-karma": "~0.8.2",
+    "grunt-mocha-istanbul": "^2.0.0",
+    "grunt-mocha-test": "~0.10.2",
     "grunt-newer": "~0.7.0",
     "grunt-ng-annotate": "^0.2.3",
+    "grunt-node-inspector": "~0.1.5",
+    "grunt-nodemon": "~0.2.0",
+    "grunt-open": "~0.2.3",
+    "grunt-protractor-runner": "^1.1.0",
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.4.0",
     "grunt-usemin": "~2.1.1",
-    "grunt-env": "~0.4.1",
-    "grunt-node-inspector": "~0.1.5",
-    "grunt-nodemon": "~0.2.0",
-    "grunt-angular-templates": "^0.5.4",
-    "grunt-dom-munger": "^3.4.0",
-    "grunt-protractor-runner": "^1.1.0",
-    "grunt-injector": "~0.5.4",
-    "grunt-karma": "~0.8.2",
-    "grunt-build-control": "DaftMonk/grunt-build-control",
+    "grunt-wiredep": "~1.8.0",
     "jit-grunt": "^0.5.0",
-    "time-grunt": "~0.3.1",
-    "grunt-express-server": "~0.4.17",
-    "grunt-open": "~0.2.3",
-    "open": "~0.0.4",
     "jshint-stylish": "~0.1.5",
-    "connect-livereload": "~0.4.0",
-    "grunt-mocha-test": "~0.10.2",
-    "grunt-mocha-istanbul": "^2.0.0",
-    "chai-as-promised": "^4.1.1",
-    "chai-things": "^0.2.0",
-    "sinon-chai": "^2.5.0",
-    "karma-mocha": "^0.1.9",
-    "karma-chai-plugins": "^0.2.3",
-    "karma-ng-scenario": "~0.1.0",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-script-launcher": "~0.1.0",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-ng-jade2js-preprocessor": "^0.1.2",
-    "karma-chrome-launcher": "~0.1.3",
-    "requirejs": "~2.1.11",
-    "karma-requirejs": "~0.2.1",
-    "karma-coffee-preprocessor": "~0.2.1",
-    "karma-jade-preprocessor": "0.0.11",
-    "karma-phantomjs-launcher": "~0.1.4",
     "karma": "~0.12.9",
+    "karma-chai-plugins": "^0.2.3",
+    "karma-chrome-launcher": "~0.1.3",
+    "karma-coffee-preprocessor": "~0.2.1",
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-html2js-preprocessor": "~0.1.0",
+    "karma-jade-preprocessor": "0.0.11",
+    "karma-mocha": "^0.1.9",
     "karma-ng-html2js-preprocessor": "~0.1.0",
+    "karma-ng-jade2js-preprocessor": "^0.1.2",
+    "karma-ng-scenario": "~0.1.0",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "karma-requirejs": "~0.2.1",
+    "karma-script-launcher": "~0.1.0",
     "karma-spec-reporter": "0.0.13",
+    "open": "~0.0.4",
     "proxyquire": "^1.0.1",
-    "supertest": "~0.11.0"
+    "requirejs": "~2.1.11",
+    "should": "^4.6.3",
+    "sinon-chai": "^2.5.0",
+    "supertest": "~0.11.0",
+    "time-grunt": "~0.3.1"
   },
   "engines": {
     "node": ">=0.10.0"
