--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
+    "async": "^0.9.0",
+    "aws-sdk": "^2.1.8",
     "body-parser": "~1.5.0",
     "composable-middleware": "^0.3.0",
     "compression": "~1.0.1",
@@ -13,9 +15,12 @@
     "express-jwt": "^0.1.3",
     "express-session": "~1.0.2",
     "jsonwebtoken": "^0.3.0",
+    "knox": "^0.9.2",
     "lodash": "~2.4.1",
     "method-override": "~1.0.0",
+    "mime": "^1.2.11",
     "morgan": "~1.0.0",
+    "multer": "^0.1.7",
     "mysql": "^2.5.4",
     "passport": "~0.2.0",
     "passport-facebook": "latest",
