--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,9 @@
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.10",
-    "angular-file-upload": "~1.1.5"
+    "angular-file-upload": "~1.1.5",
+    "angular-animate": "~1.3.12",
+    "angular-google-maps": "~2.0.12"
   },
   "devDependencies": {
     "angular-mocks": "~1.2",
