--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.9.0",
     "express-jwt": "^0.1.3",
     "express-session": "~1.0.2",
+    "googleapis": "^1.1.1",
     "jsonwebtoken": "^0.3.0",
     "knox": "^0.9.2",
     "lodash": "~2.4.1",
@@ -26,6 +27,7 @@
     "passport-local": "~0.1.6",
     "passport-twitter": "latest",
     "prerender-node": "^1.2.1",
+    "readline": "0.0.7",
     "sequelize": "^2.0.0-rc2",
     "serve-favicon": "~2.0.1",
     "socket.io": "^1.0.6",
