--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "passport-twitter": "latest",
     "prerender-node": "^1.2.1",
     "readline": "0.0.7",
-    "sequelize": "^2.0.0-rc2",
+    "sequelize": "*",
     "serve-favicon": "~2.0.1",
     "socket.io": "^1.0.6",
     "socket.io-client": "^1.0.6",
