--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "morgan": "~1.0.0",
     "multer": "^0.1.7",
     "mysql": "^2.5.4",
+    "node-mandrill": "^1.0.1",
     "passport": "~0.2.0",
     "passport-facebook": "latest",
     "passport-google-oauth": "latest",
+    "passport-linkedin": "^0.1.3",
     "passport-local": "~0.1.6",
     "passport-twitter": "latest",
     "prerender-node": "^1.2.1",
