--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "angular-ui-router": "~0.2.10",
     "angular-file-upload": "~1.1.5",
     "angular-animate": "~1.3.12",
-    "angular-google-maps": "~2.0.12"
+    "angular-google-maps": "~2.0.12",
+    "angular-busy": "~4.1.2",
+    "ngstorage": "~0.3.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2",
