--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "composable-middleware": "^0.3.0",
     "compression": "~1.0.1",
     "cookie-parser": "~1.0.1",
-    "ejs": "~0.8.4",
+    "ejs": "^0.8.8",
+    "email-templates": "^1.1.2",
     "errorhandler": "~1.0.0",
     "express": "~4.9.0",
     "express-jwt": "^0.1.3",
@@ -21,7 +22,10 @@
     "morgan": "~1.0.0",
     "multer": "^0.1.7",
     "mysql": "^2.5.4",
+    "ng-storage": "^0.3.1",
     "node-mandrill": "^1.0.1",
+    "nodemailer": "^1.3.0",
+    "nodemailer-sendgrid-transport": "^0.1.0",
     "passport": "~0.2.0",
     "passport-facebook": "latest",
     "passport-google-oauth": "latest",
