--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular-animate": "~1.3.12",
     "angular-google-maps": "~2.0.12",
     "angular-busy": "~4.1.2",
-    "ngstorage": "~0.3.0"
+    "ngstorage": "~0.3.0",
+    "angular-progress-arc": "~1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2",
