--- a/bower.json
+++ b/bower.json
@@ -24,5 +24,9 @@
   "devDependencies": {
     "angular-mocks": "~1.2",
     "angular-scenario": "~1.2"
+  },
+  "resolutions": {
+    "es5-shim": ">=3.4.0",
+    "angular": ">=1.2.19"
   }
 }
