--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-google-maps": "~2.0.12",
     "angular-busy": "~4.1.2",
     "ngstorage": "~0.3.0",
-    "angular-progress-arc": "~1.0.0"
+    "angular-progress-arc": "~1.0.0",
+    "toastr": "~2.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2",
