--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "angular-busy": "~4.1.2",
     "ngstorage": "~0.3.0",
     "angular-progress-arc": "~1.0.0",
-    "toastr": "~2.1.0"
+    "toastr": "~2.1.0",
+    "angular-strap": "~2.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2",
