--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "ngstorage": "~0.3.0",
     "angular-progress-arc": "~1.0.0",
     "toastr": "~2.1.0",
-    "angular-strap": "~2.2.0"
+    "angular-strap": "~2.2.0",
+    "angucomplete-alt": "~0.0.37"
   },
   "devDependencies": {
     "angular-mocks": "~1.2",
