--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "angular-progress-arc": "~1.0.0",
     "toastr": "~2.1.0",
     "angular-strap": "~2.2.0",
-    "angucomplete-alt": "~0.0.37"
+    "angucomplete-alt": "~0.0.37",
+    "angular-slick": "~0.1.18"
   },
   "devDependencies": {
     "angular-mocks": "~1.2",
