--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "toastr": "~2.1.0",
     "angular-strap": "~2.2.0",
     "angucomplete-alt": "~0.0.37",
-    "angular-slick": "~0.1.18"
+    "angular-slick": "~0.1.18",
+    "angular-moment": "~0.9.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2",
