--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "server/app.js",
   "dependencies": {
     "async": "^0.9.0",
+    "tiny-lr-fork": "0.0.5",
     "body-parser": "~1.5.0",
     "composable-middleware": "^0.3.0",
     "compression": "~1.0.1",
