--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "angular-bootstrap": "~0.11.0",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
-    "angular-socket-io": "~0.6.0",
+    "angular-socket-io": "^0.7.0",
     "angular-ui-router": "~0.2.10",
     "angular-file-upload": "~1.1.5",
     "angular-animate": "~1.2.0",
