--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "socket.io": "^1.0.6",
     "socket.io-client": "^1.0.6",
     "socketio-jwt": "^2.0.2",
-    "sqlite3": "~3.0.2"
+    "sqlite3": "~3.0.2",
+    "tiny-lr-fork": "0.0.5"
   },
   "devDependencies": {
     "chai-as-promised": "^4.1.1",
