--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^0.1.7",
     "mysql": "^2.5.4",
     "node-mandrill": "^1.0.1",
+    "node-schedule": "^0.2.6",
     "nodemailer": "^1.3.0",
     "nodemailer-sendgrid-transport": "^0.1.0",
     "passport": "~0.2.0",
