--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "email-templates": "^1.1.2",
     "errorhandler": "~1.0.0",
     "express": "~4.9.0",
-    "express-jwt": "^0.1.3",
+    "express-jwt": "2.1.0",
     "express-session": "~1.0.2",
     "googleapis": "^1.1.1",
     "jsonwebtoken": "^4.2.2",
