--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "knox": "^0.9.2",
     "lodash": "~2.4.1",
     "method-override": "~1.0.0",
+    "mixpanel": "^0.2.0",
     "morgan": "~1.0.0",
     "multer": "^0.1.7",
     "mysql": "^2.5.4",
