--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "angular-strap": "~2.2.0",
     "angucomplete-alt": "~0.0.37",
     "angular-slick": "~0.1.18",
-    "angular-moment": "~0.9.0"
+    "angular-moment": "~0.9.0",
+    "jquery.stellar": "~0.6.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2",
