--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "angucomplete-alt": "~0.0.37",
     "angular-slick": "~0.1.18",
     "angular-moment": "~0.9.0",
-    "jquery.stellar": "~0.6.2"
+    "jquery.stellar": "~0.6.2",
+    "ng-optimizely": "~0.2.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2",
