--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "email-templates": "^1.1.2",
     "errorhandler": "~1.0.0",
     "express": "~4.9.0",
-    "express-jwt": "2.1.0",
+    "express-jwt": "^3.0.0",
     "express-session": "~1.0.2",
     "googleapis": "^1.1.1",
-    "jsonwebtoken": "^4.2.2",
+    "jsonwebtoken": "^5.0.0",
     "knox": "^0.9.2",
     "lodash": "~2.4.1",
     "method-override": "~1.0.0",
@@ -46,8 +46,6 @@
     "tiny-lr-fork": "0.0.5"
   },
   "devDependencies": {
-    "chai-as-promised": "^4.1.1",
-    "chai-things": "^0.2.0",
     "connect-livereload": "~0.4.0",
     "grunt": "~0.4.4",
     "grunt-angular-templates": "^0.5.4",
@@ -69,9 +67,6 @@
     "grunt-google-cdn": "~0.4.0",
     "grunt-injector": "~0.5.4",
     "grunt-jscs": "~0.7.1",
-    "grunt-karma": "~0.8.2",
-    "grunt-mocha-istanbul": "^2.0.0",
-    "grunt-mocha-test": "~0.10.2",
     "grunt-newer": "~0.7.0",
     "grunt-ng-annotate": "^0.2.3",
     "grunt-node-inspector": "^0.1.5",
@@ -85,27 +80,11 @@
     "grunt-wiredep": "~1.8.0",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "~0.1.5",
-    "karma": "~0.12.9",
-    "karma-chai-plugins": "^0.2.3",
-    "karma-chrome-launcher": "~0.1.3",
-    "karma-coffee-preprocessor": "~0.2.1",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-jade-preprocessor": "0.0.11",
-    "karma-mocha": "^0.1.9",
-    "karma-ng-html2js-preprocessor": "~0.1.0",
-    "karma-ng-jade2js-preprocessor": "^0.1.2",
-    "karma-ng-scenario": "~0.1.0",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "karma-requirejs": "~0.2.1",
-    "karma-script-launcher": "~0.1.0",
-    "karma-spec-reporter": "0.0.13",
     "open": "~0.0.4",
     "protractor": "^2.0.0",
     "proxyquire": "^1.0.1",
     "requirejs": "~2.1.11",
     "should": "^4.6.3",
-    "sinon-chai": "^2.5.0",
     "supertest": "~0.11.0",
     "time-grunt": "~0.3.1"
   },
