--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "angular-slick": "~0.1.18",
     "angular-moment": "~0.9.0",
     "jquery.stellar": "~0.6.2",
-    "ng-optimizely": "~0.2.1"
+    "ng-optimizely": "~0.2.1",
+    "angular-media-queries": "~0.4.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2",
