--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "angular-moment": "~0.9.0",
     "jquery.stellar": "~0.6.2",
     "ng-optimizely": "~0.2.1",
-    "angular-media-queries": "~0.4.0"
+    "angular-media-queries": "~0.4.0",
+    "pubnub-angular": "~1.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2",
