--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pg": "^4.3.0",
     "pg-hstore": "^2.3.1",
     "prerender-node": "^1.2.1",
+    "pubnub": "^3.7.12",
     "readline": "0.0.7",
     "sequelize": "*",
     "serve-favicon": "~2.0.1",
