--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "ng-optimizely": "~0.2.1",
     "angular-media-queries": "~0.4.0",
     "pubnub-angular": "~1.1.0",
-    "ngInfiniteScroll": "1.2.0"
+    "ngInfiniteScroll": "1.2.0",
+    "ngDialog": "~0.5.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2",
